platform/deploy/services/router/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: router
  labels:
    istio-injection: enabled
    threadforge.io/component: router
